--- a/apps/arclight/project.json
+++ b/apps/arclight/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/arclight",
   "projectType": "application",
-  "tags": [],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
@@ -97,6 +96,9 @@
         "jestConfig": "apps/arclight/jest.config.ts"
       }
     },
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -113,5 +115,6 @@
         ]
       }
     }
-  }
+  },
+  "tags": []
 }
