--- a/apps/nexus-admin/project.json
+++ b/apps/nexus-admin/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/nexus-admin",
   "projectType": "application",
-  "tags": [],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
@@ -98,6 +97,10 @@
         "jestConfig": "apps/nexus-admin/jest.config.ts"
       }
     },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -156,5 +159,6 @@
         "parallel": false
       }
     }
-  }
+  },
+  "tags": []
 }
