--- a/apps/api-users/project.json
+++ b/apps/api-users/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/api-users/src",
   "projectType": "application",
-  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
@@ -56,6 +55,10 @@
       "options": {
         "command": "npm run ts-node tools/scripts/generate-typings.ts api-users --transpileOnly"
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -163,5 +166,6 @@
         }
       }
     }
-  }
+  },
+  "tags": []
 }
