--- a/apps/journeys-admin/project.json
+++ b/apps/journeys-admin/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/journeys-admin",
   "projectType": "application",
-  "tags": ["doppler_config:stg_dev"],
   "implicitDependencies": ["locales"],
   "targets": {
     "build": {
@@ -115,6 +114,10 @@
         "jestConfig": "apps/journeys-admin/jest.config.ts"
       }
     },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -185,5 +188,6 @@
         "parallel": false
       }
     }
-  }
+  },
+  "tags": ["doppler_config:stg_dev"]
 }
