--- a/libs/nest/gqlAuthGuard/project.json
+++ b/libs/nest/gqlAuthGuard/project.json
@@ -3,8 +3,11 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/nest/gqlAuthGuard/src",
   "projectType": "library",
-  "tags": [],
   "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/nest/gqlAuthGuard"],
@@ -18,5 +21,6 @@
         "command": "codecov -f coverage/libs/nest/gqlAuthGuard/cobertura-coverage.xml -F libs.nest.gqlAuthGuard"
       }
     }
-  }
+  },
+  "tags": []
 }
